Add talent submission API: Implemented POST endpoint for talent applications with validation, rate limiting, and Supabase integration. Updated ApplicationForm component to handle UTM parameters and honeypot for bot detection. Enhanced translations for error messages in English and Arabic.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -381,6 +381,11 @@
 			"title": "تم إرسال الطلب",
 			"description": "رح نراجعه ونرجعلك قريب."
 		},
+		"errors": {
+			"rateLimit": "طلبات كتير. جرّب بعد دقيقة.",
+			"generic": "صار خطأ. جرّب مرة تانية.",
+			"network": "خطأ بالاتصال. تأكد من الإنترنت وجرّب مرة تانية."
+		},
 		"privacyNote": "بإرسالك الطلب، بتوافق نراجع معلوماتك ونتواصل معك بخصوص الفرص."
 	},
 	"footer": {
