--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -16,22 +16,22 @@
 		"cta": "قدّم على Jeem"
 	},
 	"hero": {
-		"headline": "انضمّ لشبكة",
-		"headlineAccent": "بتخلّي الشغل يمشي صح",
-		"subheadline": "انربط بمشاريع حقيقية مع فرق جدّية. طوّر مهارتك، تقاضى بالدولار، واشتغل ضمن مجتمع بيقدّر الجودة قبل الكمية.",
+		"headline": "انضمّ لشبكة يلي فيها",
+		"headlineAccent": "البنّائين بيِسلّموا",
+		"subheadline": "توصّل بشغل حقيقي مع فرق جدّية. كبّر مهارتك، اقبض بالدولار، وكون ضمن مجتمع بيقدّر الجودة قبل الكمية.",
 		"primaryCta": "قدّم على Jeem",
 		"secondaryCta": "شوف الأدوار",
 		"trustPills": {
-			"remoteFriendly": "شغل عن بُعد",
+			"remoteFriendly": "مناسب للشغل عن بُعد",
 			"paidInUsd": "الدفع بالدولار",
 			"seriousTeams": "فرق جدّية",
-			"portfolioFirst": "البورتفوليو أهم"
+			"portfolioFirst": "الأولوية للبورتفوليو"
 		},
 		"stats": {
 			"title": "أرقام الشبكة",
 			"activeBuilders": {
 				"value": "150+",
-				"label": "مواهب نشيطة"
+				"label": "بنّائين نشطين"
 			},
 			"teamsServed": {
 				"value": "40+",
@@ -45,7 +45,7 @@
 		"latestMatch": {
 			"title": "آخر تطابق",
 			"role": "Vibe Coding Engineer",
-			"time": "من يومين"
+			"time": "تطابق من يومين"
 		},
 		"thisWeek": {
 			"title": "هالأسبوع",
@@ -53,16 +53,16 @@
 			"categories": "ضمن 5 مجالات"
 		},
 		"quote": {
-			"text": "أخيرًا شبكة بتحترم وقتي وبتوصلني بمشاريع بتستاهل.",
-			"author": "— مطوّر Senior"
+			"text": "أخيرًا شبكة بتحترم وقتي وبتوصلني بشغل عنجد بستاهل.",
+			"author": "— مطوّر خبير"
 		}
 	},
 	"roles": {
 		"sectionLabel": "الأدوار المتاحة",
-		"title": "لاقِي مكانك ضمن الشبكة",
-		"description": "نبحث عن مختصّين بيشتغلوا وبيسلّموا. اختار مجالك وورجينا شغلك.",
+		"title": "لاقِي مكانك بالشبكة",
+		"description": "عم ندور على مختصّين بيشتغلوا وبيِسلّموا. اختار مجالك وورجينا شغلك.",
 		"whatYouDo": "شو رح تعمل",
-		"whatGoodLooksLike": "كيف بيكون الشغل الجيد",
+		"whatGoodLooksLike": "شو يعني شغل قوي",
 		"categories": {
 			"engineering": {
 				"label": "هندسة وبرمجة",
@@ -70,22 +70,33 @@
 					"vibeCodingEngineer": {
 						"title": "Vibe Coding Engineer",
 						"whatYouDo": [
-							"بناء منتجات باستخدام أدوات مدعومة بالذكاء الاصطناعي",
-							"تحويل الأفكار لكود شغّال بسرعة",
-							"التطوير السريع مع الحفاظ على الجودة"
+							"تبني منتجات بسرعة باستخدام أدوات AI",
+							"تحوّل الأفكار لكود شغّال بسرعة",
+							"تطوّر بسرعة بس بدون ما تضحّي بالجودة"
 						],
-						"whatGoodLooksLike": ["سبق واشتغلت بأدوات مثل Cursor أو Copilot", "بتعرف تشرح قراراتك بوضوح"],
+						"whatGoodLooksLike": [
+							"سبق وسلّمت شغل باستخدام Cursor أو Copilot أو أدوات مشابهة",
+							"بتعرف تشرح قراراتك بسرعة وبوضوح"
+						],
 						"tools": ["Cursor", "Claude", "GPT-4", "Vercel", "React"]
 					},
 					"softwareDeveloper": {
 						"title": "Software Developer",
-						"whatYouDo": ["بناء وصيانة تطبيقات إنتاجية", "كتابة كود نظيف ومجرّب", "التعاون مع فرق التصميم والمنتج"],
-						"whatGoodLooksLike": ["عندك مشاريع حقيقية أو بورتفوليو واضح", "بتقدر تستلم الميزة من الفكرة للتنفيذ"],
+						"whatYouDo": [
+							"تبني وتطوّر تطبيقات جاهزة للإنتاج",
+							"تكتب كود نظيف ومجرّب ومفهوم",
+							"تشتغل مع فريق التصميم والمنتج لتطلع الميزة بأحسن شكل"
+						],
+						"whatGoodLooksLike": ["عندك بورتفوليو فيه شغل متسلّم وواضح", "بتقدر تملِك الميزة من الفكرة للتنفيذ وللنشر"],
 						"tools": ["TypeScript", "React", "Node.js", "PostgreSQL", "AWS"]
 					},
 					"contentCreatorEngineer": {
 						"title": "صانع محتوى تقني",
-						"whatYouDo": ["إنشاء محتوى تقني واضح ومفيد", "بناء شروحات وديموهات", "تبسيط المفاهيم التقنية للجمهور"],
+						"whatYouDo": [
+							"تعمل محتوى تقني واضح ومفيد",
+							"تبني شروحات وديموهات عملية",
+							"تبسّط المفاهيم التقنية لجمهور أوسع"
+						],
 						"whatGoodLooksLike": ["محتواك عليه تفاعل حقيقي", "بتعرف تشرح المواضيع المعقّدة ببساطة"],
 						"tools": ["MDX", "YouTube", "Twitter/X", "Notion", "Figma"]
 					}
@@ -96,24 +107,31 @@
 				"roles": {
 					"marketer": {
 						"title": "Marketer",
-						"whatYouDo": ["زيادة الوعي وجذب المستخدمين", "تخطيط وتنفيذ حملات تسويقية", "تحليل النتائج وتحسين الأداء"],
-						"whatGoodLooksLike": ["اشتغلت على حملات أثّرت بالأرقام", "بتفكّر استراتيجي وبتنفّذ عملي"],
+						"whatYouDo": [
+							"تزيد الوعي وتجيب مستخدمين جداد",
+							"تخطّط وتنفّذ حملات عبر قنوات مختلفة",
+							"تقيس النتائج وتطوّر الأداء خطوة بخطوة"
+						],
+						"whatGoodLooksLike": [
+							"اشتغلت على حملات أثّرت بالأرقام بشكل واضح",
+							"بتفكّر استراتيجي وبتنفّذ بسرعة وبحرفية"
+						],
 						"tools": ["Google Ads", "Meta Ads", "Mixpanel", "HubSpot", "Notion"]
 					},
 					"seoAeoSpecialist": {
 						"title": "SEO & AEO Specialist",
 						"whatYouDo": [
-							"تحسين المحتوى لمحركات البحث والـ AI",
-							"بحث كلمات مفتاحية وتحليل منافسين",
-							"تنفيذ استراتيجيات محتوى بتترتّب"
+							"تحسّن المحتوى لمحركات البحث والـ AI",
+							"تبحث كلمات مفتاحية وتحلّل المنافسين",
+							"تنفّذ استراتيجيات محتوى بتجيب ترتيب ونتيجة"
 						],
-						"whatGoodLooksLike": ["رفعت الترافيك العضوي بشكل واضح", "بتفهم البحث الحديث"],
+						"whatGoodLooksLike": ["رفعت الترافيك العضوي بشكل واضح", "بتفهم كيف تغيّر البحث بالسنين الأخيرة"],
 						"tools": ["Ahrefs", "SEMrush", "Screaming Frog", "ChatGPT", "Perplexity"]
 					},
 					"socialMediaManager": {
 						"title": "Social Media Manager",
-						"whatYouDo": ["إدارة حضور العلامة على السوشيال", "إنشاء وجدولة المحتوى", "بناء تفاعل مع الجمهور"],
-						"whatGoodLooksLike": ["كبرت حسابات بتفاعل حقيقي", "بتفهم طبيعة كل منصة"],
+						"whatYouDo": ["تدير حضور البراند على السوشيال", "تكتب/تنتج وتجدول المحتوى", "تبني تفاعل حقيقي مع الجمهور"],
+						"whatGoodLooksLike": ["كبرت حسابات بتفاعل حقيقي", "بتفهم طبيعة كل منصة وشو بيمشي عليها"],
 						"tools": ["Buffer", "Hootsuite", "Canva", "CapCut", "Twitter/X"]
 					}
 				}
@@ -123,20 +141,32 @@
 				"roles": {
 					"leadGenerator": {
 						"title": "Lead Generator",
-						"whatYouDo": ["البحث عن عملاء محتملين مناسبين", "بناء قوائم Leads دقيقة", "تأهيل الـ Leads قبل المبيعات"],
-						"whatGoodLooksLike": ["الـ Leads تبعك تحوّلت لشغل فعلي", "بتعرف توصل لصنّاع القرار"],
+						"whatYouDo": [
+							"تدور على عملاء محتملين مناسبين",
+							"تبني قوائم Leads دقيقة ومرتّبة",
+							"تأهّل الـ Leads قبل ما توصل للمبيعات"
+						],
+						"whatGoodLooksLike": ["الـ Leads تبعك بتتحوّل لشغل فعلي", "بتعرف توصل لصنّاع القرار بسرعة"],
 						"tools": ["Apollo.io", "LinkedIn Sales Nav", "Clay", "Clearbit", "Hunter.io"]
 					},
 					"salesPipelinesBuilder": {
 						"title": "Sales Pipelines Builder",
-						"whatYouDo": ["تنظيم عمليات البيع على الـ CRM", "إعداد أتمتة وتقارير", "تحسين مراحل التحويل"],
-						"whatGoodLooksLike": ["بنيت Pipelines مستخدمة فعليًا", "فاهم البيع والتقنية مع بعض"],
+						"whatYouDo": [
+							"تنظّم عمليات البيع على الـ CRM",
+							"تجهّز أتمتة وتقارير بتفيد الفريق",
+							"تحسّن مراحل التحويل خطوة بخطوة"
+						],
+						"whatGoodLooksLike": ["بنيت Pipelines مستخدمة فعليًا", "فاهم البيع والتقنية سوا"],
 						"tools": ["HubSpot", "Salesforce", "Pipedrive", "Zapier", "Close"]
 					},
 					"leadQualifier": {
 						"title": "Lead Qualifier",
-						"whatYouDo": ["تقييم الـ Leads بسرعة", "إجراء مكالمات تعارف", "تحويل الـ Leads المناسبة للمبيعات"],
-						"whatGoodLooksLike": ["بتقيّم الفرصة خلال وقت قصير", "تواصلك واضح ومنظّم"],
+						"whatYouDo": [
+							"تقيّم الـ Leads بسرعة",
+							"تعمل مكالمات تعارف قصيرة",
+							"تحوّل الـ Leads المناسبة لفريق المبيعات"
+						],
+						"whatGoodLooksLike": ["بتقيّم الفرصة بسرعة وبدقّة", "تواصلك واضح ومنظّم"],
 						"tools": ["HubSpot", "Calendly", "Zoom", "Slack", "Notion"]
 					}
 				}
@@ -146,16 +176,20 @@
 				"roles": {
 					"designer": {
 						"title": "Designer",
-						"whatYouDo": ["تصميم واجهات جميلة وعملية", "إنشاء مواد بصرية وتسويقية", "التعاون مع المطوّرين بالتنفيذ"],
+						"whatYouDo": [
+							"تصمّم واجهات جميلة وعملية",
+							"تعمل مواد بصرية وتسويقية",
+							"تتعاون مع المطوّرين ليوصل التصميم للتنفيذ"
+						],
 						"whatGoodLooksLike": ["بورتفوليوك يبيّن ذوقك وتنوّعك", "بتقدر تسلّم شغل فعلي"],
 						"tools": ["Figma", "Framer", "Photoshop", "Illustrator", "Webflow"]
 					},
 					"aiVideoCreator": {
 						"title": "AI Video Creator",
 						"whatYouDo": [
-							"إنتاج فيديوهات باستخدام أدوات AI",
-							"إنشاء شورتات وإعلانات وشروحات",
-							"التجريب السريع بالأفكار"
+							"تنتج فيديوهات باستخدام أدوات AI",
+							"تعمل شورتات وإعلانات وشروحات",
+							"تجرّب أفكار بسرعة وتطلع بنتيجة"
 						],
 						"whatGoodLooksLike": ["فيديوهاتك جابت تفاعل حقيقي", "بتدير العملية من السكربت للإخراج"],
 						"tools": ["Runway", "Pika", "HeyGen", "ElevenLabs", "CapCut"]
@@ -167,8 +201,8 @@
 				"roles": {
 					"virtualAssistant": {
 						"title": "Virtual Assistant",
-						"whatYouDo": ["إدارة المواعيد والإيميلات", "تنفيذ مهام بحث وتوثيق", "تنظيم الشغل ومتابعته"],
-						"whatGoodLooksLike": ["بتتوقّع الاحتياجات قبل ما تنطلب", "ملتزم ودقيق وسريع ردّ"],
+						"whatYouDo": ["تدير المواعيد والإيميلات", "تنجز مهام بحث وتوثيق", "تنظّم الشغل وتتابعه من أوله لآخره"],
+						"whatGoodLooksLike": ["بتتوقّع الاحتياجات قبل ما تنطلب", "ملتزم ودقيق وسريع بالردّ"],
 						"tools": ["Notion", "Slack", "Gmail", "Calendly", "Asana"]
 					}
 				}
@@ -178,12 +212,12 @@
 	"howItWorks": {
 		"sectionLabel": "الآلية",
 		"title": "كيف Jeem بتشتغل معك",
-		"description": "عملية واضحة وبسيطة. شغلك وبورتفوليوك أهم من الشهادات.",
+		"description": "العملية واضحة وبسيطة. شغلك وبورتفوليوك أهم من أي شهادات.",
 		"steps": {
 			"apply": {
 				"number": "01",
 				"title": "قدّم",
-				"description": "قدّم طلبك مع بورتفوليو أو أمثلة عن شغلك."
+				"description": "قدّم طلبك ومعه بورتفوليو أو أمثلة عن شغلك."
 			},
 			"getScreened": {
 				"number": "02",
@@ -193,36 +227,36 @@
 			"getTrained": {
 				"number": "03",
 				"title": "تجهيز",
-				"description": "تدريب بسيط ليواكب متطلبات الشركات."
+				"description": "تجهيز خفيف ليتوافق شغلك مع متطلبات الشركات."
 			},
 			"matchToWork": {
 				"number": "04",
 				"title": "تطابق",
-				"description": "لما يطلع مشروع مناسب، منخبرك لتقرّر."
+				"description": "لما يطلع مشروع مناسب، منخبرك لتقرّر إذا بدّك تمشي فيه."
 			},
 			"deliverAndGrow": {
 				"number": "05",
 				"title": "سلّم وتطوّر",
-				"description": "سلّم شغل قوي، خد ملاحظات، وطوّر سمعتك."
+				"description": "سلّم شغل قوي، خُد ملاحظات، وكبّر سمعتك."
 			}
 		}
 	},
 	"benefits": {
 		"sectionLabel": "المزايا",
 		"title": "ليش تختار Jeem",
-		"description": "شبكة مبنية لتسهيل الشغل الصح.",
+		"description": "شبكة معمولة لتسهّل عليك الشغل الصح.",
 		"items": {
 			"qualityWork": {
 				"title": "مشاريع نوعية",
-				"description": "شغل حقيقي مع فرق حقيقية."
+				"description": "فرص حقيقية مع فرق جدّية."
 			},
 			"clearScope": {
 				"title": "توقعات واضحة",
-				"description": "تسليمات وجداول واضحة من البداية."
+				"description": "تسليمات وتوقيت واضحين من أول يوم."
 			},
 			"growthFeedback": {
 				"title": "ملاحظات للتطوّر",
-				"description": "Feedback مفيد بعد كل مشروع."
+				"description": "Feedback صريح ومفيد بعد كل مشروع."
 			},
 			"communityLearning": {
 				"title": "مجتمع ودعم",
@@ -230,75 +264,75 @@
 			},
 			"flexible": {
 				"title": "مرونة باحترافية",
-				"description": "مرونة بالوقت مع احترام الالتزام."
+				"description": "مرونة بالوقت، بس مع احترام الالتزام."
 			},
 			"fairPay": {
 				"title": "دفع عادل وواضح",
-				"description": "الدفع بالدولار وباتفاق مسبق."
+				"description": "الدفع بالدولار وباتفاق واضح قبل ما تبلّش."
 			}
 		}
 	},
 	"proof": {
 		"sectionLabel": "قيمنا",
 		"title": "شو بنقدّر",
-		"description": "المبادئ يلي نمشي عليها بالشغل.",
+		"description": "المبادئ يلي منمشي عليها بكل شغل.",
 		"values": {
 			"quality": {
 				"title": "الجودة",
-				"description": "نشتغل شغل منفتخر فيه."
+				"description": "بدنا شغل منفتخر فيه."
 			},
 			"speed": {
 				"title": "السرعة",
-				"description": "الحركة والاستمرارية مهمّة."
+				"description": "السرعة مهمّة… بس بدون تهوّر."
 			},
 			"communication": {
 				"title": "التواصل",
-				"description": "وضوح وتحديثات بدون مفاجآت."
+				"description": "وضوح وتحديثات أول بأول، بدون مفاجآت."
 			},
 			"ownership": {
 				"title": "تحمّل المسؤولية",
-				"description": "نملك النتيجة، مو بس المهمّة."
+				"description": "منملِك النتيجة، مو بس المهمّة."
 			}
 		},
 		"testimonials": [
 			{
 				"quote": "شبكة بتحترم الوقت وبتقدّم مشاريع واضحة وجديّة.",
-				"role": "مطوّر Senior عبر Jeem"
+				"role": "مطوّر خبير عبر Jeem"
 			},
 			{
 				"quote": "التقييم كان دقيق بس عادل. هلّق الفرص يلي بتوصلني نوعية.",
-				"role": "Product Designer عبر Jeem"
+				"role": "مصمّم منتجات عبر Jeem"
 			},
 			{
 				"quote": "تجربة مختلفة فعلًا. تواصل واضح وشغل محترم.",
-				"role": "Growth Marketer عبر Jeem"
+				"role": "مسوّق نمو عبر Jeem"
 			}
 		],
 		"standards": {
 			"title": "معايير Jeem",
-			"description": "المستوى يلي منلتزم فيه.",
+			"description": "المستوى يلي منلتزم فيه بكل مرة.",
 			"items": ["نراجع كل بورتفوليو", "منقيّم كل طلب يدويًا", "نشتغل بس مع فرق منثق فيها", "نعطي ملاحظات صريحة"]
 		}
 	},
 	"faq": {
 		"sectionLabel": "أسئلة شائعة",
 		"title": "أسئلة بتهمّك",
-		"description": "كل يلي لازم تعرفه عن الانضمام لـ Jeem.",
+		"description": "كل يلي لازم تعرفه قبل ما تنضمّ لـ Jeem.",
 		"items": [
 			{
 				"question": "مين فيو يقدّم؟",
 				"answer": "أي شخص عنده مهارات واضحة ضمن الأدوار المذكورة. يهمّنا شغلك أكتر من شهادتك أو مكانك."
 			},
 			{
-				"question": "هل لازم أكون بمكان معيّن؟",
+				"question": "لازم كون بمكان معيّن؟",
 				"answer": "لا، الشغل عن بُعد. بعض المشاريع بتحتاج تداخل ساعات مع أمريكا أو أوروبا."
 			},
 			{
 				"question": "شو مستوى الإنكليزي المطلوب؟",
-				"answer": "تواصل كتابي واضح. أغلب الشغل async، فالكتابة مهمة."
+				"answer": "تواصل كتابي واضح. أغلب الشغل async، فالكتابة مهمّة كتير."
 			},
 			{
-				"question": "كيف بيتم الدفع؟",
+				"question": "كيف بيكون الدفع؟",
 				"answer": "الدفع بالدولار، غالبًا عبر تحويل بنكي أو Wise، والاتفاق قبل البدء."
 			},
 			{
@@ -310,8 +344,8 @@
 				"answer": "نعم، بس ركّز على أقوى مجال عندك."
 			},
 			{
-				"question": "إذا أنا موظّف دوام كامل؟",
-				"answer": "ما في مشكلة، المهم تكون واضح بخصوص وقتك."
+				"question": "إذا عندي دوام كامل؟",
+				"answer": "ما في مشكلة، المهم تكون واضح بخصوص وقتك والتزامك."
 			},
 			{
 				"question": "في رسوم للانضمام؟",
@@ -322,7 +356,7 @@
 	"applicationForm": {
 		"sectionLabel": "التقديم",
 		"title": "جاهز تنضمّ؟",
-		"description": "ورجينا شو اشتغلت. منراجع كل طلب.",
+		"description": "ورجّينا شو اشتغلت. منراجع كل طلب.",
 		"trustSignals": {
 			"respond": "منردّ على كل الطلبات",
 			"responseTime": "عادة خلال 2–3 أيام",
@@ -339,7 +373,7 @@
 			},
 			"role": {
 				"label": "الدور",
-				"placeholder": "اختار الدور"
+				"placeholder": "اختار الدور المناسب"
 			},
 			"englishLevel": {
 				"label": "مستوى الإنكليزي",
@@ -378,7 +412,7 @@
 			"sending": "عم ينرسل..."
 		},
 		"success": {
-			"title": "تم إرسال الطلب",
+			"title": "وصلنا طلبك",
 			"description": "رح نراجعه ونرجعلك قريب."
 		},
 		"errors": {
@@ -386,10 +420,10 @@
 			"generic": "صار خطأ. جرّب مرة تانية.",
 			"network": "خطأ بالاتصال. تأكد من الإنترنت وجرّب مرة تانية."
 		},
-		"privacyNote": "بإرسالك الطلب، بتوافق نراجع معلوماتك ونتواصل معك بخصوص الفرص."
+		"privacyNote": "بمجرّد ما تبعت الطلب، بتوافق إنّا نراجع معلوماتك ونتواصل معك بخصوص الفرص."
 	},
 	"footer": {
-		"tagline": "مبني للناس يلي بتسلّم شغل",
+		"tagline": "مبني لناس بتسلّم شغل",
 		"links": {
 			"twitterX": "Twitter/X",
 			"linkedin": "LinkedIn"
