Add kicker to hero section: Introduced a new kicker in both Arabic and English translations for the landing page to enhance messaging. Updated HeroSection component to display the kicker with styling and animation.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -16,6 +16,7 @@
 		"cta": "قدّم على Jeem"
 	},
 	"hero": {
+		"kicker": "سوريّة الصنع • عم نشتغل مع فرق بشركات كبيرة",
 		"headline": "انضمّ لشبكة يلي فيها",
 		"headlineAccent": "البنّائين بيِسلّموا",
 		"subheadline": "توصّل بشغل حقيقي مع فرق جدّية. كبّر مهارتك، اقبض بالدولار، وكون ضمن مجتمع بيقدّر الجودة قبل الكمية.",
