--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,6 +16,7 @@
 		"cta": "Apply to Jeem"
 	},
 	"hero": {
+		"kicker": "Syrian-built • Working with teams at leading companies",
 		"headline": "Join the network where",
 		"headlineAccent": "builders ship",
 		"subheadline": "Get matched with real work from serious teams. Grow your craft, earn in USD, and be part of a community that values quality over quantity.",
