Update Arabic translation for navigation: Corrected the phrasing of "ليش جيم" to "ليش Jeem" for improved clarity and consistency in the user interface.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -440,7 +440,7 @@
 		"nav": {
 			"badge": "للشركات",
 			"links": {
-				"whyJeem": "ليش جيم",
+				"whyJeem": "ليش Jeem",
 				"talentPool": "المواهب",
 				"howItWorks": "كيف بتتم",
 				"proof": "النتائج",
