Update email address in translations and email sending function: Changed the email address from "hello@jeem.work" to "hello@jeem.now" in both Arabic and English translation files, and updated the sender email in the email sending function for consistency across the application.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
 	"common": {
 		"jeem": "Jeem",
-		"email": "hello@jeem.work",
+		"email": "hello@jeem.now",
 		"required": "*",
 		"optional": "(optional)"
 	},
